# chat_bot_widget

app1/: .env  pyproject.toml
app1/backend/: __init__.py  llm.py  main.py
app1/frontend/: index.html
app1/frontend/static/css/: chat.css
app1/frontend/static/js/: chat.js
app1/frontend/templates/: error.html
app2/: README.md  app.py  pyproject.toml
app2/static/css/: style.css  widget-custom.css
app2/static/js/: main.js  widget-custom.js
app2/templates/: index.html
