[tool.poetry]
name = "app1"
version = "0.1.0"
description = ""
authors = ["kuldeep  jeengar <kuldeepjeengar50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
groq = "^0.20.0"
jinja2 = "^3.1.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
